--- a/ESTILOS/panel-administrador-estilo.css
+++ b/ESTILOS/panel-administrador-estilo.css
@@ -3,10 +3,6 @@
     padding: 0;
 }
 
-body {
-    background-color: aquamarine;
-}
-
 .contenedor-principal {
     padding: 0;
     max-width: 100%;
@@ -19,8 +15,6 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: auto;
-    background-color: rgb(255, 173, 173);
 }
 
 .seccion-elegida {
@@ -29,7 +23,6 @@ body {
     display: flex;
     flex-direction: column;
     height: auto;
-    background-color: rgb(146, 146, 255);
 }
 
 .row {
@@ -42,4 +35,23 @@ body {
     justify-content: center;
     align-items: center;
     height: 75px;
+}
+
+.col-3 {
+    min-height: 100vh;
+    border-right: 2px solid #1b4a62;
+    background-color: #96d3f1;
+}
+
+body {
+    background-color:#baddd6;
+}
+.btnPanel{
+    background-color:#4bbbf2;
+    transition:.5s;
+}
+.btnPanel:hover{
+    background-color: #3aa3d4;
+    color: black;
+    transition:.5s;
 }
