--- a/ESTILOS/panel-administrador-estilo.css
+++ b/ESTILOS/panel-administrador-estilo.css
@@ -1,57 +1,57 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .contenedor-principal {
-    padding: 0;
-    max-width: 100%;
-    max-height: 100%;
+  padding: 0;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .seccion-panel {
-    margin: 0;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  margin: 0;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .seccion-elegida {
-    margin: 0;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    height: auto;
+  margin: 0;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  height: auto;
 }
 
 .row {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .btnPanel {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 75px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 75px;
 }
 
 .col-3 {
-    min-height: 100vh;
-    border-right: 2px solid #1b4a62;
-    background-color: white;
+  min-height: 100vh;
+  border-right: 2px solid #1b4a62;
+  background-color: white;
 }
 
 body {
-    background-color: white;
+  background-color: white;
 }
-.btnPanel{
-    background-color:#4bbbf2;
-    transition:.5s;
+.btnPanel {
+  background-color: #4bbbf2;
+  transition: 0.5s;
 }
-.btnPanel:hover{
-    background-color: #3aa3d4;
-    color: black;
-    transition:.5s;
+.btnPanel:hover {
+  background-color: #3aa3d4;
+  color: black;
+  transition: 0.5s;
 }
